fix: review follow-ups (visible orbital cloud, paused-camera orbit, perf, tests)
Address the fresh review of the new scenes and engine:
- OrbitalScene: draw each sample as a small 3D cross instead of a GL point,
  which is invisible on WebGL (the shader never sets the point size); the
  flagship quantum cloud now renders in the browser.
- 3D scenes: move camera orbit out of update() into render() so it keeps
  working while paused, and cache the surface sampling (Pauli, Laplace,
  Gradient) instead of resampling every frame.
- Lorenz: deque trail instead of ArrayList.remove(0); drop depth test for the
  translucent trail; orbit while paused.
- Interference: coarser grid concept and allocation-free distance in the
  engine.
- Tests: replace the tautological double-pendulum rod test with a real
  small-oscillation stability test; add a sawtooth Fourier test; pin the
  driven-oscillator amplitude and the 2p decay constant; tighten Lorenz
  bounds. Correct Interference and Curves.arc Javadoc.
Make Scene.update a default no-op for purely static scenes. Rebuild web.